--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "cordova-plugin-network-information": "~1.3.3",
     "cordova-plugin-speechrecognition": "1.2.0",
     "cordova-plugin-vibration": "~2.1.5",
+    "es6-promise-plugin": "4.2.2",
     "geolib": "^2.0.24",
+    "phonegap-plugin-media-recorder": "1.1.0",
+    "phonegap-plugin-media-stream": "1.2.1",
     "phonegap-plugin-speech-synthesis": "git+https://github.com/macdonst/SpeechSynthesisPlugin.git",
     "requirejs": "^2.3.6"
   },
@@ -56,7 +59,8 @@
         "XWALK_MULTIPLEAPK": "true"
       },
       "cordova-plugin-file": {},
-      "cordova-plugin-media": {}
+      "cordova-plugin-media": {},
+      "phonegap-plugin-media-recorder": {}
     }
   }
 }
