--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "cordova-plugin-globalization": "~1.0.7",
     "cordova-plugin-inappbrowser": "~1.7.1",
     "cordova-plugin-media": "5.0.2",
-    "cordova-plugin-media-capture": "~1.4.3",
+    "cordova-plugin-media-capture": "^1.4.3",
     "cordova-plugin-network-information": "~1.3.3",
     "cordova-plugin-speechrecognition": "1.2.0",
     "cordova-plugin-vibration": "~2.1.5",
-    "es6-promise-plugin": "4.2.2",
+    "es6-promise-plugin": "^4.2.2",
     "geolib": "^2.0.24",
     "phonegap-plugin-media-recorder": "1.1.0",
-    "phonegap-plugin-media-stream": "1.2.1",
+    "phonegap-plugin-media-stream": "^1.2.1",
     "phonegap-plugin-speech-synthesis": "git+https://github.com/macdonst/SpeechSynthesisPlugin.git",
     "requirejs": "^2.3.6"
   },
@@ -63,6 +63,9 @@
       "cordova-plugin-media": {},
       "phonegap-plugin-media-recorder": {},
       "cordova-plugin-android-permissions": {}
-    }
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
