--- a/plugins/cordova-plugin-media-capture/package.json
+++ b/plugins/cordova-plugin-media-capture/package.json
@@ -1,52 +1,71 @@
 {
-  "_from": "cordova-plugin-media-capture@~1.4.3",
+  "_args": [
+    [
+      "cordova-plugin-media-capture@~1.4.3",
+      "/home/romuald/Documents/Cours_Master/projet_2/projet-s2"
+    ]
+  ],
+  "_from": "cordova-plugin-media-capture@>=1.4.3 <1.5.0",
   "_id": "cordova-plugin-media-capture@1.4.3",
-  "_inBundle": false,
-  "_integrity": "sha1-IOO74zT7uJ9iSwIYjqxTcnQ5IPo=",
+  "_inCache": true,
+  "_installable": true,
   "_location": "/cordova-plugin-media-capture",
+  "_nodeVersion": "6.10.1",
+  "_npmOperationalInternal": {
+    "host": "packages-12-west.internal.npmjs.com",
+    "tmp": "tmp/cordova-plugin-media-capture-1.4.3.tgz_1493685648831_0.005625565070658922"
+  },
+  "_npmUser": {
+    "email": "maj.fil@gmail.com",
+    "name": "filmaj"
+  },
+  "_npmVersion": "3.10.10",
   "_phantomChildren": {},
   "_requested": {
-    "type": "range",
-    "registry": true,
-    "raw": "cordova-plugin-media-capture@~1.4.3",
     "name": "cordova-plugin-media-capture",
-    "escapedName": "cordova-plugin-media-capture",
+    "raw": "cordova-plugin-media-capture@~1.4.3",
     "rawSpec": "~1.4.3",
-    "saveSpec": null,
-    "fetchSpec": "~1.4.3"
+    "scope": null,
+    "spec": ">=1.4.3 <1.5.0",
+    "type": "range"
   },
   "_requiredBy": [
-    "#USER"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/cordova-plugin-media-capture/-/cordova-plugin-media-capture-1.4.3.tgz",
   "_shasum": "20e3bbe334fbb89f624b02188eac5372743920fa",
+  "_shrinkwrap": null,
   "_spec": "cordova-plugin-media-capture@~1.4.3",
-  "_where": "/Users/alki/lbbe-app/lbbe",
+  "_where": "/home/romuald/Documents/Cours_Master/projet_2/projet-s2",
   "author": {
     "name": "Apache Software Foundation"
   },
   "bugs": {
     "url": "https://github.com/apache/cordova-plugin-media-capture/issues"
   },
-  "bundleDependencies": false,
   "cordova": {
     "id": "cordova-plugin-media-capture",
     "platforms": [
-      "android",
       "amazon-fireos",
-      "ubuntu",
-      "ios",
+      "android",
       "blackberry10",
-      "wp7",
-      "wp8",
+      "ios",
+      "ubuntu",
+      "windows",
       "windows8",
-      "windows"
+      "wp7",
+      "wp8"
     ]
   },
-  "deprecated": false,
+  "dependencies": {},
   "description": "Cordova Media Capture Plugin",
   "devDependencies": {
     "jshint": "^2.6.0"
+  },
+  "directories": {},
+  "dist": {
+    "shasum": "20e3bbe334fbb89f624b02188eac5372743920fa",
+    "tarball": "https://registry.npmjs.org/cordova-plugin-media-capture/-/cordova-plugin-media-capture-1.4.3.tgz"
   },
   "engines": {
     "cordovaDependencies": {
@@ -57,22 +76,50 @@
   },
   "homepage": "https://github.com/apache/cordova-plugin-media-capture#readme",
   "keywords": [
-    "cordova",
-    "media",
     "capture",
-    "ecosystem:cordova",
-    "cordova-android",
+    "cordova",
     "cordova-amazon-fireos",
-    "cordova-ubuntu",
-    "cordova-ios",
+    "cordova-android",
     "cordova-blackberry10",
+    "cordova-ios",
+    "cordova-ubuntu",
+    "cordova-windows",
+    "cordova-windows8",
     "cordova-wp7",
     "cordova-wp8",
-    "cordova-windows8",
-    "cordova-windows"
+    "ecosystem:cordova",
+    "media"
   ],
   "license": "Apache-2.0",
+  "maintainers": [
+    {
+      "name": "bowserj",
+      "email": "bowserj@apache.org"
+    },
+    {
+      "name": "csantanapr",
+      "email": "csantana23@gmail.com"
+    },
+    {
+      "name": "filmaj",
+      "email": "maj.fil@gmail.com"
+    },
+    {
+      "name": "purplecabbage",
+      "email": "purplecabbage@gmail.com"
+    },
+    {
+      "name": "shazron",
+      "email": "shazron@gmail.com"
+    },
+    {
+      "name": "stevegill",
+      "email": "stevengill97@gmail.com"
+    }
+  ],
   "name": "cordova-plugin-media-capture",
+  "optionalDependencies": {},
+  "readme": "ERROR: No README data found!",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/apache/cordova-plugin-media-capture.git"
