--- a/package.json
+++ b/package.json
@@ -23,13 +23,6 @@
     "cordova-plugin-globalization": "~1.0.7",
     "cordova-plugin-inappbrowser": "~1.7.1",
     "cordova-plugin-media": "5.0.2",
-<<<<<<< HEAD
-    "cordova-plugin-media-capture": "^1.4.3",
-    "cordova-plugin-network-information": "~1.3.3",
-    "cordova-plugin-speechrecognition": "1.2.0",
-    "cordova-plugin-vibration": "~2.1.5",
-    "es6-promise-plugin": "^4.2.2",
-=======
     "cordova-plugin-media-capture": "1.4.3",
     "cordova-plugin-network-information": "~1.3.3",
     "cordova-plugin-speechrecognition": "1.2.0",
@@ -37,11 +30,10 @@
     "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
     "dexie": "^2.0.4",
     "es6-promise-plugin": "4.2.2",
->>>>>>> f2a325942047f1bbd807bf054b85700783bf6dc3
     "geolib": "^2.0.24",
     "localforage": "^1.7.3",
     "phonegap-plugin-media-recorder": "1.1.0",
-    "phonegap-plugin-media-stream": "^1.2.1",
+    "phonegap-plugin-media-stream": "1.2.1",
     "phonegap-plugin-speech-synthesis": "git+https://github.com/macdonst/SpeechSynthesisPlugin.git",
     "requirejs": "^2.3.6"
   },
@@ -75,18 +67,14 @@
       "cordova-plugin-file": {},
       "cordova-plugin-media": {},
       "phonegap-plugin-media-recorder": {},
-<<<<<<< HEAD
-      "cordova-plugin-android-permissions": {}
-    },
-    "platforms": [
-      "android"
-    ]
-=======
       "cordova-plugin-android-permissions": {},
       "es6-promise-plugin": {},
       "phonegap-plugin-media-stream": {},
       "cordova-plugin-whitelist": {}
-    }
->>>>>>> f2a325942047f1bbd807bf054b85700783bf6dc3
+    },
+    "platforms": [
+      "android",
+      "browser"
+    ]
   }
 }
