--- a/plugins/cordova-plugin-speechrecognition/package.json
+++ b/plugins/cordova-plugin-speechrecognition/package.json
@@ -22,7 +22,7 @@
   "_resolved": "https://registry.npmjs.org/cordova-plugin-speechrecognition/-/cordova-plugin-speechrecognition-1.2.0.tgz",
   "_shasum": "005f10c896fd9293d8587fe5522a2b642dea970a",
   "_spec": "cordova-plugin-speechrecognition",
-  "_where": "/Users/alki/lbbe-app/lbbe",
+  "_where": "/Users/alki/lbbe",
   "author": {
     "name": "Peter Bakondy"
   },
