--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "phonegap-plugin-media-recorder": "1.1.0",
     "phonegap-plugin-media-stream": "1.2.1",
     "phonegap-plugin-speech-synthesis": "git+https://github.com/macdonst/SpeechSynthesisPlugin.git",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "cordova-plugin-viewport": "1.0.3",
+    "phonegap-plugin-mobile-accessibility": "https://github.com/phonegap/phonegap-mobile-accessibility.git"
   },
   "devDependencies": {},
   "scripts": {
@@ -62,7 +64,9 @@
       "cordova-plugin-android-permissions": {},
       "es6-promise-plugin": {},
       "phonegap-plugin-media-stream": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-viewport": {},
+      "phonegap-plugin-mobile-accessibility": {}
     },
     "platforms": [
       "android",
