--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cordova-android": "^7.1.4",
     "cordova-browser": "^5.0.4",
     "cordova-plugin-android-permissions": "1.0.0",
+    "cordova-plugin-background-fetch": "5.4.1",
     "cordova-plugin-battery-status": "~1.2.4",
     "cordova-plugin-camera": "~2.4.1",
     "cordova-plugin-compat": "1.2.0",
@@ -23,24 +24,24 @@
     "cordova-plugin-inappbrowser": "~1.7.1",
     "cordova-plugin-media": "5.0.2",
     "cordova-plugin-media-capture": "1.4.3",
+    "cordova-plugin-multi-window": "0.0.3",
     "cordova-plugin-network-information": "~1.3.3",
     "cordova-plugin-speechrecognition": "1.2.0",
+    "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-vibration": "~2.1.5",
+    "cordova-plugin-viewport": "1.0.3",
     "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
+    "cordova-plugin-x-toast": "2.7.2",
+    "cordova.plugins.diagnostic": "4.0.11",
     "dexie": "^2.0.4",
     "es6-promise-plugin": "4.2.2",
     "geolib": "^2.0.24",
     "localforage": "^1.7.3",
     "phonegap-plugin-media-recorder": "1.1.0",
     "phonegap-plugin-media-stream": "1.2.1",
-    "phonegap-plugin-speech-synthesis": "git+https://github.com/macdonst/SpeechSynthesisPlugin.git",
-    "requirejs": "^2.3.6",
-    "cordova-plugin-viewport": "1.0.3",
     "phonegap-plugin-mobile-accessibility": "https://github.com/phonegap/phonegap-mobile-accessibility.git",
-    "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-multi-window": "0.0.3",
-    "cordova-plugin-x-toast": "2.7.2",
-    "cordova-plugin-background-fetch": "5.4.1"
+    "phonegap-plugin-speech-synthesis": "git+https://github.com/macdonst/SpeechSynthesisPlugin.git",
+    "requirejs": "^2.3.6"
   },
   "devDependencies": {},
   "scripts": {
@@ -74,7 +75,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-multi-window": {},
       "cordova-plugin-x-toast": {},
-      "cordova-plugin-background-fetch": {}
+      "cordova-plugin-background-fetch": {},
+      "cordova.plugins.diagnostic": {}
     },
     "platforms": [
       "android",
