--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,7 @@
       "cordova-plugin-network-information",
       "cordova-plugin-splashscreen",
       "geolib",
+      "cordova-plugin-camera",
       "@types/materialize-css"
     ],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
