--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,7 @@
       "cordova-plugin-dialogs",
       "cordova-plugin-network-information",
       "cordova-plugin-splashscreen",
+      "cordova-plugin-media-capture",
       "geolib",
       "cordova-plugin-camera",
       "@types/materialize-css"
