--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/dexie": "^1.3.1",
     "@types/localforage": "0.0.34",
     "@types/materialize-css": "^1.0.6",
+    "@types/sortablejs": "^1.7.2",
     "artyom.js": "^1.0.6",
     "cordova-android": "^7.1.4",
     "cordova-browser": "^5.0.4",
@@ -43,7 +44,8 @@
     "phonegap-plugin-media-stream": "1.2.1",
     "phonegap-plugin-mobile-accessibility": "https://github.com/phonegap/phonegap-mobile-accessibility.git",
     "phonegap-plugin-speech-synthesis": "file:hooks/phonegap-plugin-speech-synthesis",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "sortablejs": "^1.9.0"
   },
   "devDependencies": {},
   "scripts": {
